@@ -38,19 +38,19 @@ create view idle_view
   where name = 'cpuidle';
 
 create virtual table freq_idle
-  using span_join(freq_view PARTITIONED cpu, idle_view PARTITIONED cpu)
+  using span_join(freq_view PARTITIONED cpu, idle_view PARTITIONED cpu);
 
 create virtual table window_freq_idle using window;
 
 create virtual table span_freq_idle
-  using span_join(freq_idle PARTITIONED cpu, window_freq_idle)
+  using span_join(freq_idle PARTITIONED cpu, window_freq_idle);
 
 update window_freq_idle
   set
     window_start=(select min(ts) from sched),
     window_dur=(select max(ts) - min(ts) from sched),
     quantum=1000000
-  where rowid = 0
+  where rowid = 0;
 
 create view counter_view
   as select
@@ -66,6 +66,6 @@ create view counter_view
       when 4294967295 then freq_value
       else idle_value
     end as value
-  from span_freq_idle
+  from span_freq_idle;
 
-select cpu, name, value, sum(dur) from counter_view group by cpu, name, value
+select cpu, name, value, sum(dur) from counter_view group by cpu, name, value;
