@@ -3,6 +3,8 @@ Unreleased:
     * Removed DCHECK that would cause crashes when a debug build of the service
       is used with a producer built with -DNDEBUG.
   Trace Processor:
+    * Added reqiurement of separating queries by semi-colon (;) followed by
+      new-line when specifying a query file with -q to trace processor shell.
     * Added "ancestor_slice_by_stack" and "descendant_slice_by_stack" table
       functions to walk up and down the slice stacks.
   UI:
